--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "libreoffice-convert",
+  "name": "@thedeephakani/libreoffice-convert",
   "version": "1.4.1",
   "description": "A simple and fast node.js module for converting office documents to different formats",
   "main": "index.js",
